--- a/WantedPreOnboarding/ImageLoaderTableViewCell.xib
+++ b/WantedPreOnboarding/ImageLoaderTableViewCell.xib
@@ -37,6 +37,9 @@
                         <state key="normal" title="Load">
                             <imageReference key="image" image="square.and.arrow.down" catalog="system" symbolScale="medium"/>
                         </state>
+                        <connections>
+                            <action selector="didTapLoadButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="v4a-eg-7Oy"/>
+                        </connections>
                     </button>
                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="82Q-dU-1lq">
                         <rect key="frame" x="56" y="38" width="20" height="20"/>
