[Feat] Implement load all image at once feature

--- a/WantedPreOnboarding/Base.lproj/Main.storyboard
+++ b/WantedPreOnboarding/Base.lproj/Main.storyboard
@@ -26,6 +26,9 @@
                                     <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="17"/>
                                     <color key="baseBackgroundColor" systemColor="systemPinkColor"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="didTapLoadAllButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="G56-bQ-hSb"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="96" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="KiC-tp-V3n">
                                 <rect key="frame" x="12" y="79" width="369" height="651"/>
